레퍼런스 라이브러리 확장: 마케팅·보안·인프라 3개 도메인 신설 + 전 항목 코드 예시
- 신규 3개 도메인 110개 항목: 마케팅 45(애널리틱스·SEO·실험·이메일·포지셔닝·
  브랜드 효과 연구), 보안 32(OWASP·NIST·공급망·인증 RFC·방어 도구·고전 논문),
  인프라 33(쿠버네티스·IaC·GitOps·관측성·SRE·신뢰성). 모든 URL HTTP 검증
- 개발 도메인에 있던 보안 6건·인프라 6건을 새 도메인으로 이동. 중복 생성 대신
  이동을 택했고 교차링크 전부 재연결
- 전 항목에 `## 코드 예시` 절 추가 — 그 자료의 주장을 실행으로 옮긴 최소 코드와
  "이 코드가 감추는 것" 한 줄. 512개 중 479개에 추가, 33개는 선언문·링크
  큐레이션·전략 서적이라 억지 코드 대신 생략
- 중복 항목 6쌍 정리(같은 URL이 두 파일로 존재하던 것), 깨진 교차 참조 30건을
  실존 파일로 재연결, 자기 참조 15줄 제거
- 색인 전면 재생성(도메인별 _index.md 10개 + INDEX.md)을 스크립트로 자동화해
  개수·링크가 파일과 어긋나지 않게 함. 420 → 512개, 7 → 10개 도메인
- SKILL.md·README·marketplace·plugin(0.7.0) 갱신

검증: 512개 전수 — frontmatter 5필드, 필수 절, 코드펜스 균형, domain 필드와
디렉토리 일치, 색인-파일 양방향 완전 일치, INDEX.md 링크 512개 전부 유효,
신규 URL 110개 HTTP 재검증(doi.org 403은 봇 차단 허용 호스트)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>